--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/server.js",
     "dev": "nodemon api/server.js"
-
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
   "homepage": "https://github.com/Vitor-ext/Projeto-1-DS2#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "nodemon": "^3.1.9"
   }
 }
